After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 634711 - Xlib warning when RANDR is missing
Xlib warning when RANDR is missing
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: X11
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2010-11-12 19:56 UTC by Julien Cristau
Modified: 2011-01-03 16:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (1.13 KB, patch)
2010-11-12 19:56 UTC, Julien Cristau
needs-work Details | Review
take 2 (2.72 KB, patch)
2010-12-23 13:21 UTC, Julien Cristau
accepted-commit_now Details | Review

Description Julien Cristau 2010-11-12 19:56:28 UTC
Created attachment 174354 [details] [review]
proposed patch

gtk calls XRRSelectInput even when the X server doesn't support RANDR, leading to:
Xlib:  extension "RANDR" missing on display ":1.0"
at every gtk app's startup.  I tested with Xnest, but Xorg with xinerama also doesn't have RANDR.
Comment 1 Matthias Clasen 2010-11-19 14:27:01 UTC
The patch is wrong, we want to use randr even if it is 1.2
Comment 2 Julien Cristau 2010-11-19 14:50:21 UTC
(In reply to comment #1)
> The patch is wrong, we want to use randr even if it is 1.2

most of the randr code paths are already disabled if randr is < 1.3.
You'll still get ConfigureNotify on the root window, but for screen
geometry you use xinerama anyway, do you actually need randr events?

That said I'm happy to change the condition to XRRQueryExtension() if
you think it's necessary.
Comment 3 Julien Cristau 2010-12-23 13:21:55 UTC
Created attachment 176934 [details] [review]
take 2

I redid the patch to check for randr 1.2 instead of 1.3 for XRRSelectInput.  In theory you could use RRScreenChangeNotifyMask on randr < 1.2, but CrtcChangeNotify and OutputPropertyNotify are randr 1.2 events, and I'm not sure randr < 1.2 is all that interesting anyway, so I ignored that for now.
Comment 4 Matthias Clasen 2010-12-28 00:45:39 UTC
Review of attachment 176934 [details] [review]:

Looks fine now.