gdk/x11/gdkdisplay-x11.c
@@ -1220,6 +1220,7 @@ _gdk_x11_display_open (const gchar *display_name)
   _gdk_x11_precache_atoms (display, precache_atoms, G_N_ELEMENTS (precache_atoms));
 
   /* RandR must be initialized before we initialize the screens */
+  display_x11->have_randr12 = FALSE;
   display_x11->have_randr13 = FALSE;
 #ifdef HAVE_RANDR
   if (XRRQueryExtension (display_x11->xdisplay,
@@ -1229,8 +1230,11 @@ _gdk_x11_display_open (const gchar *display_name)
 
       XRRQueryVersion (display_x11->xdisplay, &major, &minor);
 
-      if ((major == 1 && minor >= 3) || major > 1)
-	  display_x11->have_randr13 = TRUE;
+      if ((major == 1 && minor >= 2) || major > 1) {
+	  display_x11->have_randr12 = TRUE;
+	  if (minor >= 3 || major > 1)
+	      display_x11->have_randr13 = TRUE;
+      }
 
        gdk_x11_register_standard_event_type (display, display_x11->xrandr_event_base, RRNumberEvents);
   }
