gdk/x11/gdkdisplay-x11.h
@@ -67,6 +67,7 @@ struct _GdkX11Display
   gboolean have_xdamage;
   gint xdamage_event_base;
 
+  gboolean have_randr12;
   gboolean have_randr13;
   gint xrandr_event_base;
 
